--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="celsius">°C</string>
     <string name="ic_oil_temperature">Oil temperature icon</string>
     <string name="n_a">N/A</string>
+    <string name="service_description">Floating widget displaying engine oil temperature received via Bluetooth Low
+        Energy
+    </string>
 </resources>
